# ai-amplify-chat

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  amplify-talk-code.py  amplify-talk-requirements.txt  app.py  app_SLM.py  app_TTS.py  app_lm_studio.py  dashboard.py  docker-compose.yml  lm_studio_requirements.txt  pyproject.toml  requirements-dev.txt  requirements-hf.txt  requirements.txt
amplify/: __init__.py  config.py
amplify/backends/: __init__.py  base.py  huggingface.py  lm_studio.py  termux.py
amplify/routes/: auth.py  chat.py
amplify/services/: logger.py  sanitizer.py
amplify/utils/: latency.py
docker/: Dockerfile.app  Dockerfile.dashboard  nginx.conf
docs/: architecture.md  backends.md  deployment.md
static/css/: glass.css
static/js/: chat.js
templates/: index.html
tests/: conftest.py  test_backends.py  test_routes.py
